# autogest

./: .gitignore  README.md  pyproject.toml
autogest/: __main__.py  config.py  main.py
cli_report_templates/: income_tax.jinja2
tests/: test_main.py
